; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/drm2/extr_drm_gem_names.c_drm_gem_find_name.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/drm2/extr_drm_gem_names.c_drm_gem_find_name.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.drm_gem_names = type { i32 }
%struct.drm_gem_ptr_match_arg = type { i64, i8* }

@drm_gem_ptr_match = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @drm_gem_find_name(%struct.drm_gem_names* %0, i8* %1) #0 {
  %3 = alloca %struct.drm_gem_names*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca %struct.drm_gem_ptr_match_arg, align 8
  store %struct.drm_gem_names* %0, %struct.drm_gem_names** %3, align 8
  store i8* %1, i8** %4, align 8
  %6 = getelementptr inbounds %struct.drm_gem_ptr_match_arg, %struct.drm_gem_ptr_match_arg* %5, i32 0, i32 0
  store i64 0, i64* %6, align 8
  %7 = load i8*, i8** %4, align 8
  %8 = getelementptr inbounds %struct.drm_gem_ptr_match_arg, %struct.drm_gem_ptr_match_arg* %5, i32 0, i32 1
  store i8* %7, i8** %8, align 8
  %9 = load %struct.drm_gem_names*, %struct.drm_gem_names** %3, align 8
  %10 = load i32, i32* @drm_gem_ptr_match, align 4
  %11 = call i32 @drm_gem_names_foreach(%struct.drm_gem_names* %9, i32 %10, %struct.drm_gem_ptr_match_arg* %5)
  %12 = getelementptr inbounds %struct.drm_gem_ptr_match_arg, %struct.drm_gem_ptr_match_arg* %5, i32 0, i32 0
  %13 = load i64, i64* %12, align 8
  ret i64 %13
}

declare dso_local i32 @drm_gem_names_foreach(%struct.drm_gem_names*, i32, %struct.drm_gem_ptr_match_arg*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
